bindings/csharp/RevaultNative.cs


internal static partial class RevaultNative
{
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint api_abi_version();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr buffer_last_error();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer buffer_last_error_details();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void buffer_free(RevaultBuffer value);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool secret_len(IntPtr handle, out nuint length);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool secret_copy(IntPtr handle, IntPtr destination, nuint destination_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void secret_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort lockbox_format_version();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort lockbox_probe_format_version(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_create(IntPtr key, nuint key_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_create_with_options(IntPtr key, nuint key_len, IntPtr cache_mode, nuint cache_len, ulong cache_bytes, IntPtr workload, nuint workload_len, IntPtr worker, nuint worker_len, nuint jobs);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_create_password(IntPtr password, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_create_contact(IntPtr contact);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_create_with_signing_key(IntPtr content_key, nuint key_len, IntPtr signing_key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_open(IntPtr archive, nuint archive_len, IntPtr key, nuint key_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_open_with_options(IntPtr archive, nuint archive_len, IntPtr key, nuint key_len, IntPtr cache_mode, nuint cache_len, ulong cache_bytes, IntPtr workload, nuint workload_len, IntPtr worker, nuint worker_len, nuint jobs);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_open_password(IntPtr archive, nuint archive_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_open_contact(IntPtr archive, nuint archive_len, IntPtr contact);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_add_file(IntPtr handle, IntPtr path, nuint path_len, IntPtr data, nuint data_len, [MarshalAs(UnmanagedType.I1)] bool replace);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_add_file_with_permissions(IntPtr handle, IntPtr path, nuint path_len, IntPtr data, nuint data_len, uint permissions, [MarshalAs(UnmanagedType.I1)] bool replace);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_get_file(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_extract_file(IntPtr handle, IntPtr source, nuint source_len, IntPtr destination, nuint destination_len, [MarshalAs(UnmanagedType.I1)] bool replace);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_extract_directory(IntPtr handle, IntPtr destination, nuint destination_len, ulong max_file_bytes, ulong max_total_bytes, nuint max_files, [MarshalAs(UnmanagedType.I1)] bool restore_symlinks, [MarshalAs(UnmanagedType.I1)] bool restore_permissions, [MarshalAs(UnmanagedType.I1)] bool overwrite);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_stream_content(IntPtr handle, [MarshalAs(UnmanagedType.I1)] bool physical);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_cache_stats(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_import_stats(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_reset_import_stats(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_inspect_file(IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_page_inspection(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_recovery_report(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_recovery_report_render(IntPtr handle, [MarshalAs(UnmanagedType.I1)] bool verbose, nuint max_entries);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_recovery_scan_path(IntPtr path, nuint path_len, IntPtr key, nuint key_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern ulong lockbox_storage_len(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_set_workload_profile(IntPtr handle, IntPtr profile, nuint profile_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_set_worker_policy(IntPtr handle, IntPtr mode, nuint mode_len, nuint jobs);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_runtime_options(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_commit(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_create_dir(IntPtr handle, IntPtr path, nuint path_len, [MarshalAs(UnmanagedType.I1)] bool create_parents);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_delete(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_remove_dir(IntPtr handle, IntPtr path, nuint path_len, [MarshalAs(UnmanagedType.I1)] bool recursive);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_create_parent_dirs(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_rename(IntPtr handle, IntPtr from, nuint from_len, IntPtr to, nuint to_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_list(IntPtr handle, IntPtr path, nuint path_len, [MarshalAs(UnmanagedType.I1)] bool recursive);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_list_with_options(IntPtr handle, IntPtr path, nuint path_len, IntPtr glob, nuint glob_len, [MarshalAs(UnmanagedType.I1)] bool recursive, [MarshalAs(UnmanagedType.I1)] bool include_files, [MarshalAs(UnmanagedType.I1)] bool include_symlinks, [MarshalAs(UnmanagedType.I1)] bool include_directories, nuint limit);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_stat(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_set_variable(IntPtr handle, IntPtr name, nuint name_len, IntPtr value, nuint value_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_set_secret_variable(IntPtr handle, IntPtr name, nuint name_len, IntPtr value, nuint value_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_get_variable(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_get_secret_variable(IntPtr handle, IntPtr name, nuint name_len, out IntPtr output);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_delete_variable(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_move_variables(IntPtr handle, IntPtr moves_proto, nuint moves_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_list_variables(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_variable_sensitivity(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_add_symlink(IntPtr handle, IntPtr path, nuint path_len, IntPtr target, nuint target_len, [MarshalAs(UnmanagedType.I1)] bool replace);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_get_symlink_target(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_id(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_exists(IntPtr handle, IntPtr path, nuint path_len);
